--- a/HDFS/pom.xml
+++ b/HDFS/pom.xml
@@ -26,7 +26,7 @@
         <dependency>
             <groupId>org.apache.hadoop</groupId>
             <artifactId>hadoop-mapreduce-client-jobclient</artifactId>
-            <version>${hadoop.version}</version>
+            <version>2.7.3</version>
         </dependency>
 
         <dependency>
